# macaw

./: pyproject.toml  requirements.txt
MACAW/: pyvenv.cfg
